# AOC2024

./: .gitignore  new_day.sh  pyproject.toml  requirements.txt  run_all.sh  template.py
01/: solution.py
02/: solution.py
03/: solution.py
04/: solution.py  test_input_2.txt
05/: solution.py  test_input_2.txt  test_input_3.txt  utils.py
06/: solution.py  test_input_2.txt  utils.py
07/: solution.py
08/: solution.py
09/: solution.py
10/: solution.py
11/: solution.py
12/: solution.py
libaoc/: __init__.py  entry.py  grid.py  utils.py
