[project]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream~=2.1"
]

[tool.uv]
native-tls = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pyCodestyle
    "F",    # pyFlakes
    "UP",   # pyUpgrade
    "N",    # pep8-naming
    "I",    # imports
]

[tool.ruff.lint.isort]
known-local-folder = [
    "libaoc",
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
